# Alloy-DE

./: .gitignore  CMakeLists.txt  Makefile  README.md  resources.qrc
AlloyDE/: AppLauncher.qml  Desktop.qml  Panel.qml  Terminal.qml  main.qml
src/: TerminalProcess.cpp  TerminalProcess.h  main.cpp
